--- a/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinema_times_list.xml
@@ -3,7 +3,7 @@
     android:id="@+id/itemCinemaTimes"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_medium_3"
+    android:layout_marginTop="@dimen/margin_10dp"
     android:layout_marginEnd="@dimen/margin_10dp"
     android:background="@drawable/movies_show_times_background"
     android:gravity="center"
