--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/dm_sans</item>
+        <item>@font/dm_sans_bold</item>
+        <item>@font/dm_sans_medium</item>
         <item>@font/inter</item>
         <item>@font/inter_bold</item>
         <item>@font/inter_medium</item>
