--- a/app/src/main/res/layout/fragment_movies_food.xml
+++ b/app/src/main/res/layout/fragment_movies_food.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,30 +7,101 @@
     android:background="@color/colorPrimary"
     tools:context=".ui.fragments.movies.MoviesFoodFragment">
 
-    <include
-        android:id="@+id/appBarMoviesFood"
-        layout="@layout/layout_app_bar_movies_food" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayoutMoviesFood"
+        <include
+            android:id="@+id/appBarMoviesFood"
+            layout="@layout/layout_app_bar_movies_food" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayoutMoviesFood"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/appBarMoviesFood"
+            android:backgroundTint="@color/colorPrimary"
+            app:tabBackground="@color/colorPrimary"
+            app:tabIndicatorAnimationMode="elastic"
+            app:tabIndicatorColor="@color/colorAccent"
+            app:tabIndicatorFullWidth="false"
+            app:tabIndicatorGravity="bottom"
+            app:tabMode="scrollable"
+            app:tabRippleColor="@color/colorAccent"
+            app:tabTextAppearance="@style/TabLayoutFoodStyle"
+            app:tabTextColor="@color/white" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPagerTabLayoutMoviesFood"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tabLayoutMoviesFood" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/btnFoodOrderPurchaseMoviesFood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appBarMoviesFood"
-        android:backgroundTint="@color/colorPrimary"
-        app:tabTextAppearance="@style/TabLayoutFoodStyle"
-        app:tabBackground="@color/colorPrimary"
-        app:tabIndicatorAnimationMode="elastic"
-        app:tabIndicatorColor="@color/colorAccent"
-        app:tabIndicatorFullWidth="true"
-        app:tabIndicatorGravity="bottom"
-        app:tabMode="scrollable"
-        app:tabRippleColor="@color/colorAccent"
-        app:tabTextColor="@color/white" />
+        android:layout_gravity="bottom|center"
+        android:layout_marginStart="@dimen/margin_medium_4_n"
+        android:layout_marginEnd="@dimen/margin_medium_4_n"
+        android:layout_marginBottom="@dimen/margin_50dp"
+        android:background="@drawable/food_confirm_background">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPagerTabLayoutMoviesFood"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/tabLayoutMoviesFood" />
+        <FrameLayout
+            android:layout_width="@dimen/margin_30dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="@dimen/margin_medium_3"
+            android:paddingTop="@dimen/margin_10dp"
+            android:paddingBottom="@dimen/margin_15dp">
 
-</RelativeLayout>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="@dimen/width_drink_image"
+                android:layout_height="@dimen/height_drink_image"
+                app:srcCompat="@drawable/drink_icon" />
+
+            <TextView
+                android:id="@+id/tvPurchasedFoodCountMoviesFood"
+                android:layout_width="@dimen/width_food_count_drink_text"
+                android:layout_height="@dimen/height_food_count_drink_text"
+                android:layout_gravity="end"
+                android:background="@drawable/food_count_red_background"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_smaller" />
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/margin_19dp"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/margin_15dp"
+            android:paddingBottom="@dimen/margin_15dp">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:fontFamily="@font/inter_bold"
+                android:text="2000KS"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_regular_2x" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="@dimen/width_right_arrow"
+                android:layout_height="@dimen/height_right_arrow"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/right_arrow_black" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+</FrameLayout>
