--- a/app/src/main/res/layout/fragment_movies_food.xml
+++ b/app/src/main/res/layout/fragment_movies_food.xml
@@ -75,6 +75,13 @@
 
         </FrameLayout>
 
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="63dp"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/ic_down_arrow_black"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
