--- a/app/src/main/res/layout/fragment_movies_food.xml
+++ b/app/src/main/res/layout/fragment_movies_food.xml
@@ -39,7 +39,7 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
+    <include
         android:id="@+id/btnFoodOrderPurchaseMoviesFood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,68 +47,6 @@
         android:layout_marginStart="@dimen/margin_medium_4_n"
         android:layout_marginEnd="@dimen/margin_medium_4_n"
         android:layout_marginBottom="@dimen/margin_50dp"
-        android:background="@drawable/food_confirm_background">
-
-        <FrameLayout
-            android:layout_width="@dimen/margin_30dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="@dimen/margin_medium_3"
-            android:paddingTop="@dimen/margin_10dp"
-            android:paddingBottom="@dimen/margin_15dp">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/width_drink_image"
-                android:layout_height="@dimen/height_drink_image"
-                app:srcCompat="@drawable/drink_icon" />
-
-            <TextView
-                android:id="@+id/tvPurchasedFoodCountMoviesFood"
-                android:layout_width="@dimen/width_food_count_drink_text"
-                android:layout_height="@dimen/height_food_count_drink_text"
-                android:layout_gravity="end"
-                android:background="@drawable/food_count_red_background"
-                android:gravity="center"
-                android:text="1"
-                android:textColor="@color/white"
-                android:textSize="@dimen/text_smaller" />
-
-        </FrameLayout>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="63dp"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_down_arrow_black"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/margin_19dp"
-            android:orientation="horizontal"
-            android:paddingTop="@dimen/margin_15dp"
-            android:paddingBottom="@dimen/margin_15dp">
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:fontFamily="@font/inter_bold"
-                android:text="2000KS"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_regular_2x" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/width_right_arrow"
-                android:layout_height="@dimen/height_right_arrow"
-                android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/right_arrow_black" />
-
-        </LinearLayout>
-
-
-    </RelativeLayout>
+        layout="@layout/layout_button_movies_food"/>
 
 </FrameLayout>
